code/src/components/Summary.css
.summary {
    font-size: 1.5em;
    font-weight: 200;
    line-height: 2em;
    text-align: center;
    width: 100%;
    margin-top: 5%;
}

.name, .gender, .age, .food, .times {
    background-color: rgba(253, 136, 136, 1);
    padding: 0 5px;

}

.slider-title {
    font-size: 30px;
    font-weight: 200;
    padding-bottom: 30px;
    text-align: center;
}

.slider-parent{
    display: flex;
    flex-direction: column;
    width: 100%;
    position:relative;
    accent-color: #000000;
    margin-top: 20%;
  }

  .buble {
    font-weight: 400;
  }

.slider-value {
    display: block;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 1em;
    text-align: left;
    width: 40%;
  }

.slider {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 10px;
    padding: 0 5px;
}


@media only screen and (min-width: 768px) {

  .summary {
    width: 60%;
  }
    
  .slider-parent {
    width: 50%;
    margin-top: 10%;
  }
}

